syntax = "proto3";

package org.orleans.silo;

service UpdateGrainStateService{
    rpc UpdateState (UpdateStateRequest) returns (UpdateSuccess) {}
}

message UpdateStateRequest{
    string grainId = 1;
    string state = 2;
    string sourceIP = 3;
}

message UpdateSuccess{
    bool success = 1;
}
